using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class PlayerAnimatorParameters {
	
	//registry of all player animator parameters
	public const string death_trigger_id = "death";
	public const string revive_trigger_id = "revive";
	public const string landing_trigger_id = "landing";

	public const string jab_bool_id = "jab";
	public const string jumping_bool_id = "jumping";


}
